--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <meta property="og:title" content="cardoso restaurante" />
     <meta property="og:type" content="website" />
     <title>Restaurante Cardoso</title>
+    
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100i,300,400,600,700" rel="stylesheet">
 </head>
 <body>
     
