--- a/index.html
+++ b/index.html
@@ -13,11 +13,26 @@
     <meta property="og:title" content="cardoso restaurante" />
     <meta property="og:type" content="website" />
     <title>Restaurante Cardoso</title>
-    
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100i,300,400,600,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100i,300,400,600,700" rel="stylesheet" />
+
+    <link rel="stylesheet" href="./fontawesome/css/all.min.css" type="text/css" />
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 </head>
+
 <body>
-    
+    <header>
+        <nav></nav>
+    </header>
+
+    <section>
+
+    </section>
+
+    <script src="js/bootstrap.min.js"></script>
+
 </body>
+
 </html>
