--- a/index.html
+++ b/index.html
@@ -56,7 +56,26 @@
         </div>
     </nav>
 
-    <header></header>
+    <header class="header valign bg-img" data-scroll-index="0">
+        <div class="container">
+            <div class="row">
+                <div class="vertical-center full-width text-center caption">
+                    <h2 class="texto-efeito">Paixão pelo trabalho</h2>
+                    <h1 class="cd-headline clip texto-efeito">
+                        <span class="blc texto-efeito">Sinta </span>
+                        <span class="cd-words-wrapper texto-efeito">
+                            <b class="is-visible texto-efeito">o sabor</b>
+                            <b class="texto-efeito">curiosidade</b>
+                            <b class="texto-efeito">o lugar</b>
+                        </span>
+                    </h1>
+                </div>
+            </div>
+        </div>
+
+    
+    </header>
+
     <section></section>
 
     <script src="js/jquery-3.6.0.min.js"></script>
