feature: ensure the functioning of the header with fontawesome

--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
             </div>
         </div>
 
-    
+        <div class="arrow">
+            <a href="#" data-scroll-nav="1">
+                <i class="fas fa-chevron-down"></i>
+            </a>
+        </div>
     </header>
 
     <section></section>
