feature: ensure the functioning of the section 01

--- a/index.html
+++ b/index.html
@@ -80,7 +80,18 @@
         </div>
     </header>
 
-    <section></section>
+    <section class="historia section-padding secao01" data-scroll-index="1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5">
+                    <div class="historia-img mb-md50">
+                        <img src="img/section-01-chef.jpg" alt="">
+                        <figure>Chefe Fábio da Silva</figure>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
