refactor: remove quotes from description

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                             definitiva de um jantar íntimo. Os consumidores podem desfrutar de uma refeição tranquila e
                             sofisticada em um ambiente claro e aconchegante, mostrando aos frequentadores do restaurante
                             exatamente o que esperar em sabor e experiência.</p>
-                        <p>"Nós adotamos uma <span>abordagem inovadora</span>, combinando uma estética moderna com um
-                            serviço autêntico para oferecer pratos clássicos em forno a lenha."</p>
+                        <p>Nós adotamos uma <span>abordagem inovadora</span>, combinando uma estética moderna com um
+                            serviço autêntico para oferecer pratos clássicos em forno a lenha.</p>
                         <p>Fiel ao nome, ousado, elementar e inegavelmente vivo. Embora amemos a diversão, também
                             somos uma equipe de profissionais experientes que se esforçam para criar a melhor
                             experiência possível para nossos hóspedes.
