refactor: update description

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             serviço autêntico para oferecer pratos clássicos em forno a lenha.</p>
                         <p>Fiel ao nome, ousado, elementar e inegavelmente vivo. Embora amemos a diversão, também
                             somos uma equipe de profissionais experientes que se esforçam para criar a melhor
-                            experiência possível para nossos hóspedes.
+                            experiência possível para nossos clientes.
                             Não economizamos na generosidade do nosso serviço ou na qualidade dos nossos ingredientes, e
                             sabemos que a hospitalidade não é um conceito único.</p>
 
