feature: ensure dishes description

--- a/index.html
+++ b/index.html
@@ -121,7 +121,40 @@
             </div>
         </div>
     </section>
+    <section id="cont05" class="pratos section-padding" data-scroll-index="2">
+        <div class="container">
+            <div class="row">
+                <div class="section-head">
+                    <h4 class="titulo">Nossos Pratos</h4>
+                </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="content">
+                            <h4 class="titulo esquerda">Torre de fogo assada com fogo</h4>
+                            <p class="paragrafo">
+                                Este é um desvio das torres geladas da maioria das churrascarias. Direto da lareira,
+                                esta coleção escaldante de frutos do mar inclui lagosta do Maine, caranguejo do Alasca,
+                                camarão do Golfo, mariscos de Manila, ostras assadas e vieiras grelhadas, finalizadas
+                                com manteiga de alho / óleo de pimenta.
+                            </p>
+                        </div>
 
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="hero-img mb-md50">
+                            <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
+                                <img src="img/prato01.jpg" alt="" srcset="">
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        </div>
+        </div>
+    </section>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
