feature: ensure dishes description with css

--- a/index.html
+++ b/index.html
@@ -155,6 +155,34 @@
         </div>
         </div>
     </section>
+    <section class="pratos section-padding" data-scroll-index="2">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-lg-6">
+                    <div class="hero-img mb-md50">
+                        <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
+                            <img src="img/prato02.jpg" alt="" srcset="">
+
+                        </div>
+                    </div>
+
+
+                </div>
+                <div class="col-lg-6">
+                    <div class="content">
+                        <h4 class="titulo esquerda">Menu de prova</h4>
+                        <p class="paragrafo">
+                            Fiel ao nosso nome, há fogo em tudo o que fazemos. Isso nos leva a servir o melhor.
+                            No menu de degustação o cliente pode desfrutar do melhor que temos a oferecer com um jantar
+                            de quatro pratos selecionado pelo chef.
+                        </p>
+
+                    </div>
+
+                </div>
+            </div>
+    </section>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
