feature: ensure dishes description with images

--- a/index.html
+++ b/index.html
@@ -183,6 +183,39 @@
                 </div>
             </div>
     </section>
+
+    <section id="cont07" class="pratos section-padding" data-scroll-index="2">
+        <div class="container">
+            <div class="row">
+
+
+                <div class="col-lg-6">
+                    <div class="content">
+                        <h4 class="titulo esquerda">Viaje pelo mundo</h4>
+                        <p class="paragrafo">
+                            No Cardoso, queremos partilhar o nosso amor pela história, cultura, gastronomia e, em última
+                            instância, pelas gentes galegas e portuguesas. O nosso objetivo é fazer com que cada
+                            experiência dentro do restaurante seja tão única quanto aqueles que passaram a vida
+                            produzindo as iguarias que servimos. Queremos que os aromas, sabores e sons do Cardoso
+                            transportem os
+                            nossos hóspedes para a sensação de lugar que torna esta terra tão especial.
+                        </p>
+
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="hero-img mb-md50">
+                        <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
+                            <img src="img/prato03.png" alt="" srcset="">
+
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+    </section>
+
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 
