feature: ensure dishes description with article

--- a/index.html
+++ b/index.html
@@ -214,6 +214,18 @@
 
                 </div>
             </div>
+        </div>
+
+        <div class="main col-xs-12 col-sm-12 col-md-12 col-lg-12" data-scroll-index="3">
+            <article>
+                <h3 class="texto-artigo">"FALE-NOS DE BISTRO E PENSEMOS: BAIRRO, CASUAL, RÚSTICO. ACHAMOS CARDOSO,
+                    UMA
+                    HOMENAGEM À TRATTORIA ROMANA, COM SUA EQUIPE DE GARÇONS AMIGÁVEIS, UMA ADEGA SURPREENDENTEMENTE
+                    SÉRIA,
+                    UM ORGULHO DE QUEIJOS, PREÇOS SUAVES E COZINHA BURGUESA MELHOR DO QUE CASEIRA."&nbsp;</h3>
+                <h3><em>– Carlos Duarte - Revista Culinária</em></h3>
+            </article>
+        </div>
     </section>
 
     <script src="js/jquery-3.6.0.min.js"></script>
