--- a/index.html
+++ b/index.html
@@ -292,6 +292,46 @@
             width="100%" height="450" frameborder="0" style="border:0; margin: 60px 0px;" allowfullscreen=""
             aria-hidden="false" tabindex="0" class="mapaContato"></iframe>
     </div>
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="redes-sociais">
+                    <h3 class="chamada-rodape">Redes sociais</h3>
+                    <div class="icons-redes-sociais">
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                        <a href="https://api.whatsapp.com/send?phone=+5521992690225" target="_blank" rel="noreferrer"><i
+                                class="fab fa-whatsapp-square"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <img src="img/logo.png" class="footer-logo" alt="">
+            </div>
+            <div class="col-md-4">
+                <div class="info">
+                    <div class="address">
+                        <h6> <i class="fas fa-map-marker-alt"></i>
+                            Endereço: Av. das Americas</h6>
+                    </div>
+                    <div class="email">
+                        <h6><i class="far fa-envelope"> </i>
+                            Email: cardoso@gmail.com</h6>
+                    </div>
+                    <div class="phone">
+                        <h6><i class="fas fa-phone-square-alt"></i>
+                            Telefone: (21) 2822-9822</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-md-12">
+                <h3 class="nome-footer">Desenvolvido por Daniel Barboza</h3>
+            </div>
+        </div>
+    </footer>
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
