--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
             width="100%" height="450" frameborder="0" style="border:0; margin: 60px 0px;" allowfullscreen=""
             aria-hidden="false" tabindex="0" class="mapaContato"></iframe>
     </div>
+
     <footer class="container-fluid">
         <div class="row">
             <div class="col-md-4">
@@ -335,6 +336,9 @@
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/scrollIt.min.js"></script>
+    <script src="js/javascript-animacoes.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
 </body>
 
