--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <h4 class="titulo-contato">Entre em Contato</h4>
                 </div>
 
-                <form class="form full-width" id="formulario" method="post" action="contato.php">
+                <form class="form full-width" id="formulario" method="post" action="contact.php">
                     <div class="messages"></div>
 
                     <div class="controls">
