refactor: fix imports and update image names

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100i,300,400,600,700" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="./fontawesome/css/all.min.css" type="text/css">
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -27,13 +27,11 @@
 
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-
             <a class="logo" href="#">Cardoso</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="icon-bar"><i class="fas fa-bars"></i></span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -42,7 +40,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#" data-scroll-nav="1">Nossa História</a>
                     </li>
-
                     <li class="nav-item">
                         <a class="nav-link" href="#" data-scroll-nav="2">Pratos</a>
                     </li>
@@ -86,9 +83,8 @@
             <div class="row">
                 <div class="col-lg-5">
                     <div class="historia-img mb-md50">
-                        <img src="img/section-01-chef.jpg" alt="">
+                        <img src="img/img-section01-chef.jpg" alt="">
                         <figure>Chefe Fábio da Silva</figure>
-
                     </div>
                 </div>
                 <div class="col-lg-7">
@@ -139,36 +135,30 @@
                                 com manteiga de alho / óleo de pimenta.
                             </p>
                         </div>
-
                     </div>
                     <div class="col-lg-6">
                         <div class="hero-img mb-md50">
                             <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
-                                <img src="img/prato01.jpg" alt="" srcset="">
+                                <img src="img/img-section02-dish.jpg" alt="" srcset="">
                             </div>
                         </div>
-
                     </div>
                 </div>
-
             </div>
         </div>
         </div>
         </div>
     </section>
+
     <section class="pratos section-padding" data-scroll-index="2">
         <div class="container">
             <div class="row">
-
                 <div class="col-lg-6">
                     <div class="hero-img mb-md50">
                         <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
-                            <img src="img/prato02.jpg" alt="" srcset="">
-
+                            <img src="img/img-section03-dish.jpg" alt="" srcset="">
                         </div>
                     </div>
-
-
                 </div>
                 <div class="col-lg-6">
                     <div class="content">
@@ -178,9 +168,7 @@
                             No menu de degustação o cliente pode desfrutar do melhor que temos a oferecer com um jantar
                             de quatro pratos selecionado pelo chef.
                         </p>
-
                     </div>
-
                 </div>
             </div>
     </section>
@@ -188,8 +176,6 @@
     <section id="cont07" class="pratos section-padding" data-scroll-index="2">
         <div class="container">
             <div class="row">
-
-
                 <div class="col-lg-6">
                     <div class="content">
                         <h4 class="titulo esquerda">Viaje pelo mundo</h4>
@@ -201,13 +187,12 @@
                             transportem os
                             nossos hóspedes para a sensação de lugar que torna esta terra tão especial.
                         </p>
-
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="hero-img mb-md50">
                         <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
-                            <img src="img/prato03.png" alt="" srcset="">
+                            <img src="img/img-section04-dish.jpg" alt="" srcset="">
 
                         </div>
                     </div>
@@ -228,7 +213,7 @@
             </article>
         </div>
     </section>
-    <section class="contato section-padding bg-img" data-background="img/contato.png" data-scroll-index="4">
+    <section class="contato section-padding bg-img" data-background="img/img-contact.png" data-scroll-index="4">
         <div class="container">
             <div class="row">
 
@@ -238,9 +223,7 @@
 
                 <form class="form full-width" id="formulario" method="post" action="contact.php">
                     <div class="messages"></div>
-
                     <div class="controls">
-
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="form-group">
@@ -282,9 +265,7 @@
                         </div>
                     </div>
                 </form>
-
             </div>
-
         </div>
     </section>
     <div>
@@ -293,7 +274,6 @@
             width="100%" height="450" frameborder="0" style="border:0; margin: 60px 0px;" allowfullscreen=""
             aria-hidden="false" tabindex="0" class="mapaContato"></iframe>
     </div>
-
     <footer class="container-fluid">
         <div class="row">
             <div class="col-md-4">
@@ -308,7 +288,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <img src="img/logo.png" class="footer-logo" alt="">
+                <img src="img/img-logo.png" class="footer-logo" alt="">
             </div>
             <div class="col-md-4">
                 <div class="info">
@@ -327,7 +307,6 @@
                 </div>
             </div>
         </div>
-
         <div class="row">
             <div class="col-md-12">
                 <h3 class="nome-footer">Desenvolvido por Daniel Barboza</h3>
