feat: ensure responsive website

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         <div class="container">
             <div class="row">
                 <div class="vertical-center full-width text-center caption">
-                    <h2 class="texto-efeito">Paixão pelo trabalho</h2>
-                    <h1 class="cd-headline clip texto-efeito">
-                        <span class="blc texto-efeito">Sinta </span>
-                        <span class="cd-words-wrapper texto-efeito">
-                            <b class="is-visible texto-efeito">o sabor</b>
-                            <b class="texto-efeito">curiosidade</b>
-                            <b class="texto-efeito">o lugar</b>
+                    <h2 class="text-effect">Paixão pelo trabalho</h2>
+                    <h1 class="cd-headline clip text-effect">
+                        <span class="blc text-effect">Sinta </span>
+                        <span class="cd-words-wrapper text-effect">
+                            <b class="is-visible text-effect">o sabor</b>
+                            <b class="text-effect">curiosidade</b>
+                            <b class="text-effect">o lugar</b>
                         </span>
                     </h1>
                 </div>
@@ -78,18 +78,18 @@
         </div>
     </header>
 
-    <section class="historia section-padding secao01" data-scroll-index="1">
+    <section class="history section-padding secao01" data-scroll-index="1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
-                    <div class="historia-img mb-md50">
+                    <div class="history-img mb-md50">
                         <img src="img/img-section01-chef.jpg" alt="">
                         <figure>Chefe Fábio da Silva</figure>
                     </div>
                 </div>
                 <div class="col-lg-7">
                     <div class="content">
-                        <h4 class="titulo esquerda">Viaje pelo mundo!</h4>
+                        <h4 class="title title_position">Viaje pelo mundo!</h4>
                         <p>O <span>Restaurante Cardoso</span> é um estabelecimento elegante para a experiência
                             definitiva de um jantar íntimo. Os consumidores podem desfrutar de uma refeição tranquila e
                             sofisticada em um ambiente claro e aconchegante, mostrando aos frequentadores do restaurante
@@ -122,13 +122,13 @@
         <div class="container">
             <div class="row">
                 <div class="section-head">
-                    <h4 class="titulo">Nossos Pratos</h4>
+                    <h4 class="title">Nossos Pratos</h4>
                 </div>
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="content">
-                            <h4 class="titulo esquerda">Torre de fogo assada com fogo</h4>
-                            <p class="paragrafo">
+                            <h4 class="title title_position">Torre de fogo assada com fogo</h4>
+                            <p class="text_paragraph">
                                 Este é um desvio das torres geladas da maioria das churrascarias. Direto da lareira,
                                 esta coleção escaldante de frutos do mar inclui lagosta do Maine, caranguejo do Alasca,
                                 camarão do Golfo, mariscos de Manila, ostras assadas e vieiras grelhadas, finalizadas
@@ -162,8 +162,8 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="content">
-                        <h4 class="titulo esquerda">Menu de prova</h4>
-                        <p class="paragrafo">
+                        <h4 class="title title_position">Menu de prova</h4>
+                        <p class="text_paragraph">
                             Fiel ao nosso nome, há fogo em tudo o que fazemos. Isso nos leva a servir o melhor.
                             No menu de degustação o cliente pode desfrutar do melhor que temos a oferecer com um jantar
                             de quatro pratos selecionado pelo chef.
@@ -178,8 +178,8 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="content">
-                        <h4 class="titulo esquerda">Viaje pelo mundo</h4>
-                        <p class="paragrafo">
+                        <h4 class="title title_position">Viaje pelo mundo</h4>
+                        <p class="text_paragraph">
                             No Cardoso, queremos partilhar o nosso amor pela história, cultura, gastronomia e, em última
                             instância, pelas gentes galegas e portuguesas. O nosso objetivo é fazer com que cada
                             experiência dentro do restaurante seja tão única quanto aqueles que passaram a vida
@@ -218,7 +218,7 @@
             <div class="row">
 
                 <div class="section-head">
-                    <h4 class="titulo-contato">Entre em Contato</h4>
+                    <h4 class="title-contato">Entre em Contato</h4>
                 </div>
 
                 <form class="form full-width" id="formulario" method="post" action="contact.php">
@@ -257,7 +257,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <div class="form-group">
-                                    <span class="botao botao-lg">
+                                    <span class="button_restaurant button_restaurant-lg">
                                         <button type="submit" front="Enviar" back="&#xf35d;"></button>
                                     </span>
                                 </div>
