feat: ensure website responsive

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5">
-                    <div class="history-img mb-md50">
+                    <div class="history-img  ">
                         <img src="img/img-section01-chef.jpg" alt="">
                         <figure>Chefe Fábio da Silva</figure>
                     </div>
@@ -137,7 +137,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6">
-                        <div class="hero-img mb-md50">
+                        <div class="hero-img  ">
                             <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
                                 <img src="img/img-section02-dish.jpg" alt="" srcset="">
                             </div>
@@ -154,7 +154,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="hero-img mb-md50">
+                    <div class="hero-img  ">
                         <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
                             <img src="img/img-section03-dish.jpg" alt="" srcset="">
                         </div>
@@ -190,7 +190,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="hero-img mb-md50">
+                    <div class="hero-img  ">
                         <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;">
                             <img src="img/img-section04-dish.jpg" alt="" srcset="">
 
@@ -213,12 +213,12 @@
             </article>
         </div>
     </section>
-    <section class="contato section-padding bg-img" data-background="img/img-contact.png" data-scroll-index="4">
+    <section class="contact section-padding bg-img" data-background="img/img-contact.png" data-scroll-index="4">
         <div class="container">
             <div class="row">
 
                 <div class="section-head">
-                    <h4 class="title-contato">Entre em Contato</h4>
+                    <h4 class="title-contact">Entre em Contato</h4>
                 </div>
 
                 <form class="form full-width" id="formulario" method="post" action="contact.php">
@@ -272,13 +272,13 @@
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14690.495566374922!2d-43.3459027!3d-23.000854!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x462fe32b9550c4c9!2sBarra%20Business%20Center!5e0!3m2!1spt-BR!2sbr!4v1600347941281!5m2!1spt-BR!2sbr"
             width="100%" height="450" frameborder="0" style="border:0; margin: 60px 0px;" allowfullscreen=""
-            aria-hidden="false" tabindex="0" class="mapaContato"></iframe>
+            aria-hidden="false" tabindex="0" class="mapacontact"></iframe>
     </div>
     <footer class="container-fluid">
         <div class="row">
             <div class="col-md-4">
                 <div class="redes-sociais">
-                    <h3 class="chamada-rodape">Redes sociais</h3>
+                    <h3 class="foot">Redes sociais</h3>
                     <div class="icons-redes-sociais">
                         <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
                         <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
