--- a/index.html
+++ b/index.html
@@ -197,8 +197,6 @@
                             <img src="img/img-section04-dish.jpg" alt="" srcset="">
                         </div>
                     </div>
-
-
                 </div>
             </div>
         </div>
@@ -217,7 +215,6 @@
     <section class="contact  section-02 bg-img" data-background="img/img-contact.png" data-scroll-index="5">
         <div class="container">
             <div class="row">
-
                 <div class="section-head">
                     <h4 class="title-cont .contact ">Entre em Contato</h4>
                 </div>
@@ -278,9 +275,9 @@
     <footer class="container-fluid">
         <div class="row">
             <div class="col-md-4">
-                <div class="footer-social">
-                    <h3 class="footer-title-social">Redes sociais</h3>
-                    <div class=" footer-icons-social">
+                <div class="redes-sociais">
+                    <h3 class="chamada-rodape">Redes sociais</h3>
+                    <div class="icons-redes-sociais">
                         <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a>
                         <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
                         <a href="https://api.whatsapp.com/send?phone=+5521992690225" target="_blank" rel="noreferrer"><i
@@ -289,38 +286,41 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <img src="img/img-logo.png" class="footer-logo" alt="">
+                <img src="img/logo.png" class="footer-logo" alt="">
             </div>
             <div class="col-md-4">
-                <div class="footer-info">
-                    <div class="footer-address">
+                <div class="info">
+                    <div class="address">
                         <h6> <i class="fas fa-map-marker-alt"></i>
                             Endereço: Av. das Americas</h6>
                     </div>
-                    <div class="footer-email">
+
+                    <div class="email">
                         <h6><i class="far fa-envelope"> </i>
                             Email: cardoso@gmail.com</h6>
                     </div>
-                    <div class="footer-phone">
+
+                    <div class="phone">
                         <h6><i class="fas fa-phone-square-alt"></i>
                             Telefone: (21) 2822-9822</h6>
                     </div>
                 </div>
             </div>
         </div>
+
         <div class="row">
             <div class="col-md-12">
-                <h3 class="footer-name-developer">Desenvolvido por Daniel Barboza</h3>
+                <h3 class="nome-footer">Desenvolvido por Daniel Barboza</h3>
             </div>
         </div>
-        </footer>
+    </footer>
 
-        <script src="js/jquery-3.6.0.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/scripts.js"></script>
-        <script src="js/scrollIt.min.js"></script>
-        <script src="js/javascript-animations.js"></script>
-        <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+    <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="js/scrollIt.min.js"></script>
+    <script src="js/javascript-animations.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
 </body>
 
