refactor: add padding footer

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <section>
         <div class="main col-xs-12 col-sm-12 col-md-12 col-lg-12" data-scroll-index="4">
             <article>
-                <h3 class="article-text ">"FALE-NOS DE BISTRO E PENSEMOS: BAIRRO, CASUAL, RÚSTICO. ACHAMOS CARDOSO,
+                <h3 class="article-text">"FALE-NOS DE BISTRO E PENSEMOS: BAIRRO, CASUAL, RÚSTICO. ACHAMOS CARDOSO,
                     UMA
                     HOMENAGEM À TRATTORIA ROMANA, COM SUA EQUIPE DE GARÇONS AMIGÁVEIS, UMA ADEGA SURPREENDENTEMENTE
                     SÉRIA,
@@ -217,10 +217,10 @@
         <div class="container">
             <div class="row">
                 <div class="section-head">
-                    <h4 class="title-cont .contact ">Entre em Contato</h4>
+                    <h4 class="title title_position">Entre em Contato</h4>
                 </div>
 
-                <form class="form full-width" id="formulario" method="post" .contact ion="cont .contact .php">
+                <form class="form full-width" id="formulario" method="post" action="contact.php">
                     <div class="messages"></div>
                     <div class="controls">
                         <div class="row">
@@ -287,7 +287,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <img src="img/img-logo.png" class="footer-logo" alt="">
+                <img src="img/img-footer.png" class="footer-logo" alt="">
             </div>
             <div class="col-md-4">
                 <div class="info">
