refactor: organize conatct.php file into folder

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <h4 class="title title_position">Entre em Contato</h4>
                 </div>
 
-                <form class="form full-width" id="formulario" method="post" action="contact.php">
+                <form class="form full-width" id="formulario" method="post" action="./php/contact.php">
                     <div class="messages"></div>
                     <div class="controls">
                         <div class="row">
