refactor: update contact php file path

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <h4 class="title-cont .contact ">Entre em Contato</h4>
                 </div>
 
-                <form class="form full-width" id="formulario" method="post" .contact ion="cont .contact .php">
+                <form action="./php/contact.php" method="post" class="form full-width" id="formulario">
                     <div class="messages"></div>
                     <div class="controls">
                         <div class="row">
